# EBIDownload

./: .gitignore  CHANGELOG.md  Cargo.toml  EBIDownload.yaml  EBIDownload_env.yaml  LICENSE  README.md  clean.sh  polariseq.yaml  requirements.yaml
.github/workflows/: rust.yml
crates/ebidownload-cli/: Cargo.toml  build.rs
crates/ebidownload-cli/src/: http_server.rs  main.rs  ui_manager.rs
crates/ebidownload-core/: Cargo.toml
crates/ebidownload-core/src/: aws_s3.rs  ftp.rs  lib.rs  md5.rs  observer.rs  prefetch.rs  progress.rs  progress_store.rs
crates/ebidownload-core/src/public_data/: downloader.rs  mod.rs  validator.rs
crates/ebidownload-core/src/upload/: mod.rs
crates/ebidownload-gui/: package-lock.json  package.json
crates/ebidownload-gui/src/: App.tsx  styles.css
crates/ebidownload-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/ebidownload-gui/src-tauri/src/: app.rs  lib.rs  logger.rs  main.rs
crates/polariseq-cli/: Cargo.toml  build.rs
crates/polariseq-cli/src/: http_server.rs  main.rs  ui_manager.rs
crates/polariseq-core/: Cargo.toml
crates/polariseq-core/src/: aws_s3.rs  ftp.rs  lib.rs  md5.rs  progress.rs  progress_store.rs
crates/polariseq-core/src/public_data/: config.rs
crates/polariseq-core/src/upload/: mod.rs
crates/polariseq-gui/: index.html  package-lock.json  package.json
crates/polariseq-gui/src/: App.tsx
crates/polariseq-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/polariseq-gui/src-tauri/icons/: icon.icns
crates/polariseq-gui/src-tauri/src/: app.rs  lib.rs  main.rs
docs/: CHANGELOG.md  GUI_IMPLEMENTATION.md  README_zh.md  TODO.md  downlaod_ARCHITECTURE.md  external_deps_problem.md  polariseq_env.yaml
docs/26.7.15/: polariseq_public_data_arch.md
python/: sra_downloader_aws_v2.py
scripts/: clean.py
src/: aws_s3.rs  ftp.rs  main.rs  prefetch.rs  progress.rs
src/upload/: mod.rs
