[package]
name = "EBIDownload"
version = "1.2.4"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }


reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls", "stream", "gzip", "multipart"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter", "local-time", "time"] }
futures = "0.3"
regex = "1.10"
indicatif = "0.17"
which = "6.0"
md5 = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.6"
thiserror = "1.0"
quick-xml = "0.36"

aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.1" }
